fix alignment issues in mobile device

--- a/sass/_ciq-form.scss
+++ b/sass/_ciq-form.scss
@@ -186,6 +186,10 @@
     }
 }
 
+.cq-numbercolorpicker {
+    display: inline-flex;
+}
+
 .cq-toggle {
     display: flex;
     justify-content: space-around;
