--- a/sass/_ciq-settings-dialog.scss
+++ b/sass/_ciq-settings-dialog.scss
@@ -97,8 +97,7 @@
     input[type=number] {
         display: inline-block;
         width: 3.2em;
-        vertical-align: bottom;
-        line-height: 2em;
+        line-height: 1.9em;
         border-radius: 3px;
         margin-right: 5px;
         padding-left: 6px;
